<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aliasgarmurtaza.starinc.LoginActivity">



    <ScrollView
        android:id="@+id/login_form"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:textSize="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/signIn"
                    android:text="SIGN IN"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignRight="@id/signIn"
                    android:text="SIGN UP"/>

            </LinearLayout>

            <android.support.v7.widget.CardView

                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                card_view:elevation="15dp">
                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_name"
                            android:visibility="gone"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Gender"
                        android:visibility="gone"
                        android:id="@+id/gender"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="18dp"/>
                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:paddingBottom="5dp"
                        android:id="@+id/genderGroup"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:visibility="gone"
                            android:id="@+id/male" />

                        <RadioButton
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="Female"
                            android:visibility="gone"
                            android:id="@+id/female" />
                    </RadioGroup>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Birthday"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:id="@+id/birthdayString"
                        android:layout_marginLeft="5dp"
                        android:textSize="18dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="January 1, 1970"
                        android:id="@+id/birthdate"
                        android:textSize="18dp"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:onClick="setDateLocal"
                        android:textColor="@android:color/background_dark"
                        android:layout_marginLeft="5dp"
                        />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/programme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Programme"
                            android:visibility="gone"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/batch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Batch"
                            android:visibility="gone"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/branch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Branch"
                            android:visibility="gone"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>





                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/email"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/confirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_confirm_password"
                            android:inputType="textPassword"
                            android:visibility="gone"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>



                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            T<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alreadySignUp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/notalreadySignUp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
